# PinkPearl

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_debug.bat  build_and_run.bat  build_clang.bat  build_gcc.bat  build_msvc.bat  compile_shaders.bat
resources/assets/area/: overworld.fga  room_1.fgr  room_2.fgr  room_2.fgr.bak  room_3.fgr  room_3.fgr.bak  room_4.fgr  room_4.fgr.bak  room_5.fgr  room_5.fgr.bak  room_6.fgr  room_6.fgr.bak  room_7.fgr  room_7.fgr.bak  room_8.fgr  room_8.fgr.bak  room_9.fgr  room_9.fgr.bak
resources/assets/textures/: pbr_test.pdn
resources/data/: area.fga  area.fga.bak  area1.fga  area2.fga  test.fge  textures.fgt
resources/shaders/: Makefile  area_mesh.spv  build.bat  compile.bat  compute_matrices.spv  compute_textures.spv  frag.spv  fragment_shader.spv  fragment_shader_2.spv  fragment_test.spv  room_texture.spv  vert.spv  vertex_models.spv  vertex_shader.spv
resources/shaders/src/: ComputeMatrices.comp  FragmentShader.frag  FragmentShaderBindless.frag  FragmentShaderLines.frag  RoomTexture.comp  VertexShader.vert  VertexShaderBindless.vert  VertexShaderLines.vert  area_mesh.comp  compute_matrices.comp  compute_textures.comp  draw_data.comp  fragment_shader.frag  fragment_shader_2.frag  fragment_test.frag  room_texture.comp  room_texture_2.comp  room_vertices.comp  vertex_models.vert  vertex_shader.vert
src/: Main.c  client.c  client.h  config.h.in  debug.c  debug.h  main.c  util.h
src/audio/: audio_config.c  audio_config.h  audio_data.h  audio_loader.c  audio_loader.h  audio_mixer.c  audio_mixer.h  audio_queue.c  audio_queue.h
src/audio/portaudio/: portaudio_manager.c  portaudio_manager.h
src/game/: Game.c  Game.h  game.c  game.h  game_state.h  hitbox.c  hitbox.h  room.h
src/game/area/: area.c  area.h  area_extent.c  area_extent.h  fgm_file_parse.c  fgm_file_parse.h  room.c  room.h  tile.h
src/game/entity/: EntityAI.c  EntityAI.h  EntityManager.c  EntityManager.h  EntityPhysics.h  EntityRegistry.c  EntityRegistry.h  EntitySpawner.c  EntitySpawner.h  ecs_manager.c  ecs_manager.h  entity.c  entity.h  entity_ai.c  entity_ai.h  entity_manager.c  entity_manager.h  entity_registry.c  entity_registry.h  entity_spawner.h  entity_transform.c  entity_transform.h
src/game/math/: hitbox.c  hitbox.h  vector3D.c  vector3D.h
src/glfw/: GLFWManager.c  GLFWManager.h  InputManager.c  InputManager.h  glfw_manager.c  glfw_manager.h  input_manager.c  input_manager.h
src/log/: Logger.c  Logger.h  StatusCode.c  StatusCode.h  error_code.c  error_code.h  log_stack.c  log_stack.h  logging.c  logging.h
src/math/: Box.c  Box.h  Vector.c  Vector.h  dimensions.h  extent.c  extent.h  hitbox.c  hitbox.h  offset.c  offset.h  vector3D.c  vector3D.h  vector4F.c  vector4F.h
src/render/: RenderManager.c  RenderManager.h  RenderText.c  RenderText.h  animation.c  animation.h  area_render_state.c  area_render_state.h  camera.c  camera.h  color.c  color.h  model.c  model.h  projection.h  render_config.c  render_config.h  render_object.c  render_object.h  render_position.c  render_position.h  renderer.c  renderer.h  texture_info.c  texture_info.h  texture_pack.c  texture_pack.h  texture_state.c  texture_state.h
src/render/math/: lerp.c  lerp.h  matrix.c  matrix.h  vector3F.c  vector3F.h
src/render/stb/: ImageData.c  ImageData.h  image.c  image.h  image_data.c  image_data.h
src/render/vulkan/: Buffer2.c  Buffer2.h  CommandBuffer.c  CommandBuffer.h  ComputePipeline.c  ComputePipeline.h  Descriptor.c  Draw.c  Draw.h  GraphicsPipeline.c  GraphicsPipeline.h  Pipeline.c  Shader.c  Swapchain.c  TextureState.c  TextureState.h  VulkanManager.c  VulkanManager.h  buffer.c  buffer.h  command_buffer.c  command_buffer.h  compute_pipeline.c  compute_pipeline.h  descriptor.c  descriptor.h  frame.c  frame.h  graphics_pipeline.c  graphics_pipeline.h  image.c  image.h  layer.c  layer.h  logical_device.c  logical_device.h  memory.c  memory.h  physical_device.c  physical_device.h  (+23 more)
src/render/vulkan/compute/: ComputeMatrices.c  ComputeMatrices.h  ComputeStitchTexture.c  ComputeStitchTexture.h  compute_area_mesh.c  compute_area_mesh.h  compute_matrices.c  compute_matrices.h  compute_room_texture.c  compute_room_texture.h
src/render/vulkan/math/: Vector.h  lerp.c  lerp.h  projection.h  render_vector.c  render_vector.h  vector4F.c  vector4F.h
src/util/: Allocation.c  Allocation.h  FileIO.c  FileIO.h  Random.c  Random.h  String.c  String.h  Time.c  Time.h  Types.h  allocate.c  allocate.h  bit.c  bit.h  byte.h  extent.c  extent.h  file_io.c  file_io.h  path.h  string.c  string.h  string_array.c  string_array.h  time.c  time.h
